--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.estimote.examples.demos"
+          package="com.mumoji"
           android:versionCode="1"
           android:versionName="1.0">
 
@@ -11,17 +11,18 @@
   <!-- Needed permissions in order to scan for beacons. -->
   <uses-permission android:name="android.permission.BLUETOOTH"/>
   <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+  <uses-permission android:name="android.permission.INTERNET"/>
 
   <!-- Declaration that this app is usable on phones with Bluetooth Low Energy. -->
   <uses-feature android:name="android.hardware.bluetooth_le" android:required="true"/>
 
   <application
-      android:label="Estimote Demos"
+      android:label="Mumoji"
       android:theme="@android:style/Theme.Holo.Light">
 
     <activity
-        android:name="com.estimote.examples.demos.AllDemosActivity"
-        android:label="Estimote Demos"
+        android:name="com.mumoji.MainActivity"
+        android:label="Mumoji"
         android:screenOrientation="portrait">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
@@ -29,26 +30,8 @@
       </intent-filter>
     </activity>
 
-    <activity
-        android:name="com.estimote.examples.demos.ListBeaconsActivity"
-        android:label="Select Beacon"
-        android:screenOrientation="portrait"/>
-
-    <activity android:name="com.estimote.examples.demos.DistanceBeaconActivity"
-              android:label="Distance Demo"
-              android:screenOrientation="portrait"/>
-
-    <activity android:name="com.estimote.examples.demos.NotifyDemoActivity"
-              android:label="Notify Demo"
-              android:screenOrientation="portrait"/>
-
-    <activity android:name="com.estimote.examples.demos.CharacteristicsDemoActivity"
-              android:label="Characteristics Demo"
-              android:screenOrientation="portrait"/>
-
     <!-- Estimote service responsible for scanning beacons. -->
     <service android:name="com.estimote.sdk.service.BeaconService"
              android:exported="false"/>
   </application>
-
 </manifest>
